Instalación_de_css_js_angular

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <app-header-nav></app-header-nav>
+  <app-aside-baner></app-aside-baner>
   <app-root></app-root>
 </body>
 </html>
