--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 <body>
   <app-header-nav></app-header-nav>
   <app-aside-baner></app-aside-baner>
+  <app-formacion></app-formacion>
+  <app-proyectos></app-proyectos>
   <app-root></app-root>
 </body>
 </html>
