--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <app-aside-baner></app-aside-baner>
   <app-formacion></app-formacion>
   <app-proyectos></app-proyectos>
+  <app-experiencia></app-experiencia>
   <app-root></app-root>
 </body>
 </html>
