me_falto_importar
selector habilidad importado al índex

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <app-formacion></app-formacion>
   <app-proyectos></app-proyectos>
   <app-experiencia></app-experiencia>
+  <app-habilidades></app-habilidades>
   <app-root></app-root>
 </body>
 </html>
