--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <app-proyectos></app-proyectos>
   <app-experiencia></app-experiencia>
   <app-habilidades></app-habilidades>
+  <app-skillset></app-skillset>
   <app-root></app-root>
 </body>
 </html>
