--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <app-experiencia></app-experiencia>
   <app-habilidades></app-habilidades>
   <app-skillset></app-skillset>
+  <app-contacto></app-contacto>
   <app-root></app-root>
 </body>
 </html>
