--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <app-habilidades></app-habilidades>
   <app-skillset></app-skillset>
   <app-contacto></app-contacto>
+  <app-footer></app-footer>
   <app-root></app-root>
 </body>
 </html>
