--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
   <app-root></app-root>
+  <script
+      src="https://kit.fontawesome.com/5e138694b1.js"
+      crossorigin="anonymous"
+    ></script>
 </body>
 </html>
