video_banner_ok
video banner corregido, falla en lectura de codigo html de parte de angular.

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,17 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>FrontEND</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-  <script
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <title>FrontEND</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+    <script
       src="https://kit.fontawesome.com/5e138694b1.js"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
